--- a/4GLCuadroDeMandoRevisionDeFicherosGarum/4GLCuadroDeMandoRevisionDeFicherosGarum.csproj
+++ b/4GLCuadroDeMandoRevisionDeFicherosGarum/4GLCuadroDeMandoRevisionDeFicherosGarum.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Model\VentasResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RJTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RJTextBox.designer.cs">
+      <DependentUpon>RJTextBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Service\ApiService.cs" />
     <Compile Include="Service\IApiService.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -94,6 +100,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RJTextBox.resx">
+      <DependentUpon>RJTextBox.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
