estudio ajustes creamos el formulario y duplicamos el revision de ficheros. TODO MODIFCAR API para que lea los ficheros de ajustes

--- a/4GLCuadroDeMandoRevisionDeAjustesGarum/4GLCuadroDeMandoRevisionDeAjustesGarum.csproj
+++ b/4GLCuadroDeMandoRevisionDeAjustesGarum/4GLCuadroDeMandoRevisionDeAjustesGarum.csproj
@@ -33,8 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.52">
+      <HintPath>..\..\Bunifu_UI_v1.52.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.IO.Compression.ZipFile, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\System.IO.Compression.ZipFile.4.3.0\lib\net46\System.IO.Compression.ZipFile.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,8 +64,32 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ControlAutomatEntity.cs" />
+    <Compile Include="Model\ControlAutomatPutRequest.cs" />
+    <Compile Include="Model\ControlAutomatRequest.cs" />
+    <Compile Include="Model\ControlAutomatResponse.cs" />
+    <Compile Include="Model\CuantasEstaciones.cs" />
+    <Compile Include="Model\EmailRequest.cs" />
+    <Compile Include="Model\EstacionRequest.cs" />
+    <Compile Include="Model\EstacionResponse.cs" />
+    <Compile Include="Model\FechaRequest.cs" />
+    <Compile Include="Model\FicheroGarumResponse.cs" />
+    <Compile Include="Model\IdEstacionRequest.cs" />
+    <Compile Include="Model\Response.cs" />
+    <Compile Include="Model\TokenRequest.cs" />
+    <Compile Include="Model\TokenResponse.cs" />
+    <Compile Include="Model\UserResponse.cs" />
+    <Compile Include="Model\VentasResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RJTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RJTextBox.designer.cs">
+      <DependentUpon>RJTextBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Service\ApiService.cs" />
+    <Compile Include="Service\IApiService.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +102,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RJTextBox.resx">
+      <DependentUpon>RJTextBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -79,5 +119,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
